# ilqr-iterative-tasks

./: .gitignore  .pre-commit-config.yaml  README.md  environment.yml  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: tests.yml
data/: closed_loop_feasible.txt  closed_loop_multi_laps.txt  input_multi_laps.txt
iterative_ilqr/control/: ilqr_helper.py  iterative_ilqr.py  nonlinear_lmpc.py
iterative_ilqr/result/: README.md  ilqr_test_add_moving_obstacle.py  ilqr_test_add_static_obstacle.py  ilqr_test_no_obstacle.py  ilqr_test_static_obstacle.py  nlmpc_test_add_moving_obstacle.py  nlmpc_test_add_static_obstacle.py  nlmpc_test_static_obstacle.py  no_obstacle.py  static_obstacle.py
iterative_ilqr/systems/: kinetic_bicycle.py
iterative_ilqr/tests/: README.md  ilqr_test.py  ilqr_test_add_moving_obstacle.py  ilqr_test_add_static_obstacle.py  ilqr_test_no_obstacle.py  ilqr_test_static_obstacle.py  nlmpc_test.py  nlmpc_test_add_static_obstacle.py  nlmpc_test_no_obstacle.py  nlmpc_test_static_obstacle.py
iterative_ilqr/utils/: base.py  constants_kinetic_bicycle.py
tests/: ilqr_test.py  nlmpc_test.py
