[metadata]
name = iterative_ilqr
description = A toolkit to test iterative learning controller.
author = Yifan Zeng, Suiyi He, Jun Zeng
platforms = linux, unix, osx, win32, cygwin
classifiers = 
    Programming Language :: Python :: 3.6

[options]
packages = find:
install_requires = 
    requests>=2
python_requires = >=3.6
package_dir = 
    =iterative_ilqr
zip_safe = no

[options.extras_require]
testing = 
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
tests = py.typed

[flake8]
max-line-length = 160